--- a/style.css
+++ b/style.css
@@ -3,19 +3,19 @@
     background: linear-gradient(315deg, #3D434F 50%, #00ffb3 100%);
     -webkit-background-clip: text;
 } /* h1 class*/
-.link--with-decoration:after {
+.link--with-decoration {
     content: "";
-    display: block;
-    border-radius: 30px;
-    left: 50%;
+    /* display: block; */
+    /* border-radius: 30px; */
+    /* left: 50%; */
     transform: translate(-50%, 0);
     bottom: 0;
-    position: absolute;
+    /* position: absolute; */
     transition: all .15s ease;
     z-index: -1;
     background-color: #00ffb3;
     width: calc(100% + 5%);
-    height: 35%;
+    /* height: 35%; */
     opacity: 1;
 }/* <a> class*/
 canvas {
@@ -37,4 +37,8 @@ canvas {
 }
 #typed {
     font-size:x-large;
+}
+a {
+    text-decoration: none;
+    text-align: center;
 }
